--- a/prevalente/src/index.css
+++ b/prevalente/src/index.css
@@ -1,13 +1,38 @@
-body {
+/* CONFIGURACIÓN --> ESTILOS GLOBAL*/
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Variables*/
+:root {
+  /* Fuentes tipográficas*/
+  --font-primary: 'Montserrat', sans-serif;
+  --font-text: 'Poppins', sans-serif;
+  /* Paleta de colores*/
+  --color-primary: #2C3639;
+  --color-secundary: #0096FF;
+  --color-accent: #7F8487;
+  --color-text: #fff;
+}
+
+html {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  scroll-behavior: smooth;
+  font-size: 16px;
+}
+
+@media screen and (min-width: 320px) and (max-width: 768px) {
+  html {
+    font-size: 12px;
+  }
+}
+
+/*Diseño responsive Tablet */
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  html {
+    font-size: 15px;
+  }
 }
