--- a/prevalente/src/index.css
+++ b/prevalente/src/index.css
@@ -13,6 +13,7 @@
   /* Paleta de colores*/
   --color-primary: #2C3639;
   --color-secundary: #0096FF;
+  --color-third: #F15412;
   --color-accent: #7F8487;
   --color-text: #fff;
 }
