--- a/prevalente/src/Components/Card/Sm/Card.module.css
+++ b/prevalente/src/Components/Card/Sm/Card.module.css
@@ -33,7 +33,6 @@
 }
 
 .body__title {
-    text-decoration: none;
     font-weight: bold;
     font-family: var(--font-primary);
     font-size: 1.5rem;
@@ -55,9 +54,9 @@
     display: flex;
     align-items: center;
     column-gap: .5rem;
-    text-decoration: none;
     font-family: var(--font-text);
-    font-size: 1rem;
+    font-size: .7rem;
+    font-weight: 400;
     color: var(--color-accent);
 }
 
