--- a/prevalente/src/Components/Card/Lg/Card.module.css
+++ b/prevalente/src/Components/Card/Lg/Card.module.css
@@ -1,27 +1,86 @@
 @import url('/src/index.css');
 
 .card {
-    width: 90%;
     display: flex;
-    align-items: center;
+    background: var(--color-text);
+    gap: 1rem;
+    padding: 2rem 8rem;
     border-radius: .5rem;
     box-shadow: 5px 10px 15px 2px rgba(0,0,0,0.1);
-    background: var(--color-text);
 }
 
-.card__logo {
-    width: 50%;
-    height: 30%;
-    background: red;
+.card__content {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
 }
 
-.body__title {
-    text-decoration: none;
-    font-weight: bold;
-    font-family: var(--font-primary);
-    font-size: 1.5rem;
+.card__image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.image {
+    width: 10rem;
+}
+
+.image:hover {
+    transform: scale(1.1);
+}
+
+
+.card__button {
+    padding: .5rem 2rem;
+    border-radius: 50rem;
+    font-family: var(--font-text);
+    font-weight: 400;
     color: var(--color-primary);
+    background: var(--color-text);
+    border: .1rem solid  rgba(0,0,0,0.2);
+    box-shadow: 0 .5rem 1rem 0  rgba(0,0,0,0.2);
+    cursor: pointer;
 }
 
+.card__info {
+    background: red;
+    width: 100%;
+    margin: 2rem 0;
+    display: flex;
+    column-gap: 5rem;
+}
 
+.info__title,
+.info__description {
+    font-family: var(--font-text);
+    font-size: 1rem;
+    font-weight: 400;
+    color: var(--color-accent);
+}
 
+.info__description {
+    color: var(--color-primary);
+    font-weight: bold;
+    margin-left: .5rem;
+}
+
+.card__content__button {
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+}
+
+.container__footer {
+    padding: 6rem 0;
+}
+
+.pagination {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.text {
+    font-family: var(--font-text);
+    color: var(--color-accent);
+}
