--- a/prevalente/src/Components/Modal/Modal.module.css
+++ b/prevalente/src/Components/Modal/Modal.module.css
@@ -15,8 +15,8 @@
 }
 
 .overlay__container {
-    width: 30rem;
-    min-height: 20rem;
+    width: 30vw;
+    height: 50vh;
     position: relative;
     border-radius: .5rem;
     background: var(--color-text);
@@ -25,40 +25,64 @@
 .container__header {
     width: 100%;
     position: absolute;
+    padding: 2rem;
+}
+
+.bar {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    padding: 1rem;
+    justify-content: flex-end;
+    position: relative;
 }
 
-.button__cerrar {
-    top: 0;
-    left: 0;
-}
-
-.button__icon {
+.bar__button {
+    position: absolute;
     background: transparent;
     border: none;
     color: var(--color-primary);
     font-size: 1rem;
 }
 
-.button__icon:hover {
+.bar__button:hover {
     color: var(--color-secundary);
     transform: scale(1.1);
 }
 
-.title {
+.body__title {
     font-family: var(--font-primary);
     color: var(--color-secundary);
+    font-size: 1.5rem;
 }
 
 .container__body {
     position: absolute;
-    margin: .5rem;
+    margin: 4rem 2rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.head__content {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    background: red;
+    padding: .5rem;
+}
+
+.content_box {
+    width: 100%;
+    display: flex;
+    gap: 2rem;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.head__title {
+    font-family: var(--font-text);
+    font-size: 1rem;
+}
+
+.head__icon:hover {
+    cursor: pointer;
+    color: var(--color-secundary);
+    transform: scale(1.1);
 }
