--- a/prevalente/src/Components/Card/Sm/Card.module.css
+++ b/prevalente/src/Components/Card/Sm/Card.module.css
@@ -33,6 +33,7 @@
 }
 
 .body__title {
+    text-decoration: none;
     font-weight: bold;
     font-family: var(--font-primary);
     font-size: 1.5rem;
