--- a/prevalente/src/Page/Administration/Solicitud/Solicitud.module.css
+++ b/prevalente/src/Page/Administration/Solicitud/Solicitud.module.css
@@ -1,11 +1,11 @@
 @import url('/src/index.css');
 
 .container {
-    padding: 2rem 10rem;
+    padding: 2rem 5rem;
 }
 
 .container__body {
-    margin: 2rem;
+    margin: 1rem 0;
 }
 
 
