--- a/prevalente/src/Components/Modal/Modal.module.css
+++ b/prevalente/src/Components/Modal/Modal.module.css
@@ -86,3 +86,10 @@
     color: var(--color-secundary);
     transform: scale(1.1);
 }
+
+@media screen and (min-width: 320px) and (max-width: 768px) {
+    .overlay__container {
+        width: 75vw;
+        height: 35vh;
+     }
+}
